	* il_files.c: Added iSetOutputFake.
	* il_files.c (iSetOutputLump): Added check for NULL to accomodate ilDetermineSize function.
	* il_hdr.c:457: Changed from char* to ILbyte*.
	* il_icns.h:24,30: Changed from ILbyte to char.
	* il_size.c: Added #ifdefs for when user has declared IL_NO_XXX.  Changed error to ENUM instead of PARAM.
	* Updated MSVC8 projects with il_size.c.
	* src-IL/src/Makefile.am: Added il_size.c.
	* il_jp2.c: Added ilIsValidJp2* functions.
	* il.h: Added ilDetermineType and ilDetermineTypeL to declarations.
	* il_io.c: Changed ilDetermineTypeL to be exported.
	* il_pcx.c: Formatting issues fixed.
	* il_mdl.c: Added ilIsValidJp2* functions.
	* il_io.c: Added JP2, MDL and XPM support to ilDetermineType and ilIsValid functions.
	* il_icon.c/il_png.c: Renamed color_type to ico_color_type and png_color_type to avoid name conflicts.
	* il_iff.c: Changed all malloc->ialloc and free->ifree.  Added checks for ialloc failure.
	* il_io.c (ilDetermineTypeL): Changed VTF check to return IL_VTF instead of the miscopied IL_SUN.
	* il_size.c (ilDetermineSize): Now calls iTargaSize for Targa files.
	* il_tga.c: Added iTargaSize.

2009-01-25 Denton Woods <doomwiz@users.sf.net>
	* ilut_internal.h:63-67: Redid definitions of IL_TEXT to coincide with il_internal.h.
	* il_states.c: Updated _ilLoadExt/_ilSaveExt with all extensions.
	* il_states.h: Updated with all extensions.
	* All image formats with saving: Changed return values of ilSaveXxxF and ilSaveXxxL to be
	  an integer stating the number of bytes written.  This is what ilSaveF/L have been
	  trying to return all along.
	* il_pal.c:1075: Added error condition.
	* lib/Makefile.am: Added il_size.c.
	* simple.c: Added iluInit call.
	* il_dds-save.c (GetAlphaBlock): Applied code from GetBlock, since it was still reading out of bounds.
	* il_psd.c (ParseResources):808: Added check for ResourceSize being too small.  
	  834-837: Added check to insure that we are not copying from past the end of Resource.
	